<resources><string name="collections_title">Collections</string><string name="collections_create_album">Create album</string><string name="collections_virtual_album_body">Organize without moving files</string><string name="collections_trash">Trash</string><string name="collections_local_analysis">Local analysis and privacy</string><string name="collections_local_analysis_body">Consent, progress an
    <plurals name="me_summary_references">
        <item quantity="one">%d reference</item>
        <item quantity="other">%d references</item>
    </plurals>
    <plurals name="me_summary_matches">
        <item quantity="one">%d match</item>
...
